    files specified after that on the command line, and only error out at
    the end.
  * assistant: Added --autostop to complement --autostart.
  * Android: Updated bundled ssh from 6.1p1 to 6.4p1.
  * Work around wget bug #784348 which could cause it to clobber git-annex
    symlinks when downloading from ftp.
  * Support checking ftp urls for file presence.

 -- Joey Hess <id@joeyh.name>  Tue, 21 Apr 2015 15:54:10 -0400

git-annex (5.20150420) unstable; urgency=medium

  * Fix activity log parsing, which caused the log to not retain
    activity from other uuids.
  * Union merge could fall over if there was a file in the repository
    with the same name as a git ref. Now fixed.
  * info dir: Added information about repositories that
    contain files in the specified directory.
  * info: Added --bytes option.
  * bittorrent: Fix handling of magnet links.
  * When a key's size is unknown, still check the annex.diskreserve,
    and avoid getting content if the disk is too full.
  * Fix fsck --from a git remote in a local directory, and from
    a directory special remote.
    This was a reversion caused by the relative path changes in 5.20150113.
  * fsck --from remote: When bad content is found in the remote,
    and the local repo does not have a copy of the content, preserve
    the bad content in .git/annex/bad/ to avoid further data loss.
  * fsck --from remote: Avoid downloading a key if it would go over
    the annex.diskreserve limit.
  * required: New command, like wanted, but for required content.
  * Removed dependency on haskell SHA library,
    instead using cryptohash >= 0.11.0.
  * Make repo init more robust.
  * New debian/rules build-standalone target, which generates a
    git-annex-standalone.deb that should work on many old Debian etc
    systems. Thanks, Yaroslav Halchenko.
  * Windows: Renamed start menu file to avoid loop in some versions
    of Windows where the menu file is treated as a git-annex program.